--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is backend ",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.13"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.11.13",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
