--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 DB_CONNECTION = mongodb+srv://backendGroup:rm1234@cluster0.hxixo.mongodb.net/ITI_Graduation_Project?retryWrites=true&w=majority
-TOKEN_SECERT = SDKMDLKFDKNFDKLG
+TOKEN_SECRET = SDKMDLKFDKNFDKLG
