--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.13",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "sharp": "^0.27.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
