--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is backend ",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index"
+    "start": "node index"
   },
   "repository": {
     "type": "git",
